<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:id="@+id/coordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsMovieActivity">

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:columnCount="1"
        android:rowCount="5"
        android:useDefaultMargins="true">

        <TextView
            android:id="@+id/nomeOriginalTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:contentDescription="@string/nameOrigTB"
            android:gravity="center" />

        <ImageView
            android:id="@+id/imagemImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:contentDescription="@string/imagemFilmTB" />

        <TextView
            android:id="@+id/detalheTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:contentDescription="@string/detailFilmTB" />

        <TextView
            android:id="@+id/notaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:contentDescription="@string/voteAverageTb"
            android:text="@string/voteAverage" />

        <TextView
            android:id="@+id/nota2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1" />

    </GridLayout>
</LinearLayout>
</ScrollView>